# kafka-device-vrpn

./: .gitignore  ReadMe.md  default.nix  kafka-device-leap.cabal  kafka-device-vrpn.cabal  kafka-device-vrpn.config  release.nix  shell.nix  vrpn.cfg
src/: Main.hs
src/Network/UI/Kafka/: VRPN.hs
