name:                kafka-device-vprn
version:             0.1.0.0
synopsis:            VRPN events via a Kafka message broker
description:         This package contains functions for passing VRPN events to topics on a Kafka message broker.
license:             MIT
license-file:        LICENSE
author:              Brian W Bush <consult@brianwbush.info>
maintainer:          Brian W Bush <consult@brianwbush.info>
copyright:           (c) 2015 Brian W Bush
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10
stability:           Experimental
homepage:            https://bitbucket.org/functionally/kafka-device-vprn
bug-reports:         https://bwbush.atlassian.net/projects/HKADEVR/issues/
package-url:         https://bitbucket.org/functionally/kafka-device-vprn/downloads/kafka-device-vprn-0.1.0.0.tar.gz

extra-source-files:  ReadMe.md

source-repository head
  type: git
  location: https://bitbucket.org/functionally/kafka-device-vprn
 
library
  exposed-modules:  Network.UI.Kafka.VRPN
  build-depends:    base         >= 4.8 && < 5
               ,    kafka-device
               ,    milena
               ,    vrpn
  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010

executable kafka-device-vprn
  main-is:          Main.hs
  build-depends:    base
               ,    kafka-device
               ,    milena
               ,    vrpn
  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010
